解决虚拟线程死锁